--- a/src/app/Painel-Administrativo/usuarios/editar-usuario/editar-usuario.component.html
+++ b/src/app/Painel-Administrativo/usuarios/editar-usuario/editar-usuario.component.html
@@ -13,7 +13,7 @@
                                 <div class="row">
                                     <div class="form-group col-sm-4">
                                         <label for="nome" class="text-center">Nome</label><br>
-                                        <input type="text" name="nome" id="nome" class="form-control"
+                                        <input ValpropName type="text" name="nome" id="nome" class="form-control"
                                             formControlName="nome">
                                     </div>
                                     <div class="form-group col-sm-4">
