--- a/src/app/Site-Vendas/header-venda/header-venda.component.html
+++ b/src/app/Site-Vendas/header-venda/header-venda.component.html
@@ -16,13 +16,13 @@
             <div class="row">
                 <div class="col-sm"></div>
                 <div class="col-sm"><h4>Bem Vindo {{cliente.nome}}</h4></div>
-                <div class="col-sm alinharFim"><button type="button" class="btn btn-light" (click)="logout()">Sair</button></div>
+                <div class="col-sm alinharFim"><button type="button" class="btn btn-link" (click)="logout()">Sair</button></div>
             </div>
         </div>
 
         <input type="checkbox" id="bt_menu" />
         <label for="bt_menu">&#9776;</label>
-        <div class="cart">
+        <div class="cart" *ngIf="vendaId != null">
             <span [routerLink]="['/carrinho', vendaId]" class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge" >{{quantidadeItens}}</span></span>
         </div>
         <nav class="menu">
