--- a/src/app/Painel-Administrativo/usuarios/adicionar-usuarios/adicionar-usuarios.component.html
+++ b/src/app/Painel-Administrativo/usuarios/adicionar-usuarios/adicionar-usuarios.component.html
@@ -34,10 +34,9 @@
                                     </div>
                                     <div class="form-group col-sm-3">
 
-                                        <label for="dataNascimento" class="text-center">Data
-                                            Nascimento</label><br>
-                                        <input type="date" name="dataNascimento" id="dataNascimento"
-                                            class="form-control" formControlName="dataNascimento" >
+                                        <label for="dataNascimento" class="text-center">Data Nascimento</label><br>
+                                    <input type="date" name="dataNascimento" id="dataNascimento" class="form-control"
+                                        formControlName="dataNascimento">
                                     </div>
                                 </div>
                             </form>
