--- a/src/app/commum/login-registrar/registrar-login.component.css
+++ b/src/app/commum/login-registrar/registrar-login.component.css
@@ -2,13 +2,14 @@
 #login .container #login-row #login-column #login-box {
     margin-top: 20%;
     max-width: 100%;
-    height: 78%;   
+    height: 82%;   
     box-shadow: 0px 0px 10px black;
     border-radius: 20px;
     background-color: ffffe0;
     font-size: large;
     color: black;
 }
+
 
 #login .container #login-row #login-column #login-box #login-form {
     padding: 20px;
@@ -18,7 +19,24 @@
     margin-top: -10px;
 }
 
-.botao{
-    text-align: end;
-    margin-right: 3%;
+#buttonn{
+    text-align: center;
+    
+   
+}
+
+
+@media(max-width:576px){
+    #login .container #login-row #login-column #login-box {
+        height: 90%;   
+        transition: all 1s;    
+    }
+    #buttonn{
+        text-align: center;
+        margin-top:0;
+        margin-right:0;
+        
+    }
+        
+    
 }
