--- a/src/app/commum/login-registrar/registrar-login.component.html
+++ b/src/app/commum/login-registrar/registrar-login.component.html
@@ -13,15 +13,25 @@
                                     <label for="nome" class="text-center">Nome</label><br>
                                     <input type="text" name="nome" id="nome" class="form-control"
                                         formControlName="nome" placeholder="Nome">
-                                </div>
+                            
+                                    <div *ngIf="!nome.pristine && nome.errors">
+                                        <span *ngIf="nome.errors.required" style="color:red">Nome é obrigatório.</span>
+                                        <span *ngIf="nome.errors.maxlength" style="color:red">Nome deve ter no máximo 250 caracters.</span>
+                                    </div> 
+                                    </div>
                                 <div class="form-group">
                                     <label for="cpf" class="text-center">CPF</label><br>
                                     <input type="text" ValCpf name="cpf" class="form-control" placeholder="CPF"
                                             formControlName="cpf" mask="000.000.000-00">
-                                </div>
-                                <div class="form-group">
+                            
+                                        <div *ngIf="!cpf.pristine && cpf.errors">
+                                            <span *ngIf="cpf.errors.required" style="color:red">CPF é obrigatório.</span>
+                                            <span *ngIf="cpf.invalid && !cpf.errors.required" style="color:red">CPF inválido.</span>
+                                        </div>                                    
+                                        </div>
+                                <div class="form-group ">
                                     <label for="dataNascimento" class="text-center">Data Nascimento</label><br>
-                                    <input type="text" name="dataNascimento" id="dataNascimento" class="form-control"
+                                    <input type="date" name="dataNascimento" id="dataNascimento" class="form-control"
                                         formControlName="dataNascimento">
                                 </div>
                             </form>
@@ -33,17 +43,32 @@
                                     <label for="email" class="text-center">Email</label><br>
                                     <input type="email" name="usuario" id="email" class="form-control"
                                             formControlName="email" maxlength="100" placeholder="Email">
+                                    <div *ngIf="!email.pristine && email.errors">
+                                         <span *ngIf="email.errors.required" style="color:red">Email é obrigatório.</span>
+                                         <span *ngIf="email.invalid && !email.errors.required" style="color:red">Email inválido.</span>
+                                         <span *ngIf="email.errors.maxlength" style="color:red">Email deve ter no máximo 100 caracteres.</span>
+                                    </div>     
+    
                                 </div>
                                 <div class="form-group">
                                     <label for="senha" class="text-center">Senha </label><br>
                                     <input type="password" name="senha" id="senha" class="form-control"
                                         formControlName="senha" placeholder="Senha">
+
+                                     <div *ngIf="!senha.pristine && senha.errors">
+                                        <span *ngIf="senha.errors.required" style="color:red">Senha é obrigatória.</span>
+                                        <span *ngIf="senha.errors.maxlength" style="color:red">Senha deve ter no máximo 100 caracteres.</span>
+                                        <span *ngIf="senha.errors.minlength" style="color:red">Senha deve ter no mínimo 6 caracteres.</span>
+                                    </div>     
+
                                 </div>
                             </form>
                         </div>
                     </div>
-                    <div class="form-group botao">
-                       <button (click)="onSubmit()" class="btn btn-success">Concluir</button>
+                    <div class="form-group ">
+                        <div id=buttonn>
+                       <button (click)="onSubmit()" class="btn btn-success " [disabled]='!loginForm.valid || !clienteForm.valid'>Concluir</button>
+                        </div>
                     </div>
                 </div>
             </div>
