--- a/src/app/Painel-Administrativo/footer-administrativo/footer-administrativo.component.html
+++ b/src/app/Painel-Administrativo/footer-administrativo/footer-administrativo.component.html
@@ -1,9 +1,3 @@
-  <!-- Main Footer -->
   <footer class="main-footer">
-    <!-- To the right -->
-    <div class="float-right d-none d-sm-inline">
-      Anything you want
-    </div>
-    <!-- Default to the left -->
-    <strong>Copyright &copy; Vagnao Store 2020  <a href="index.html">A melhor loja de sinuca do Brasil</a>.</strong> 
+    <strong>Copyright &copy; Vagnao Store 2020 A melhor loja de sinuca do Brasil.</strong> 
   </footer>
